Final solution of problem 1 (without 2 and 6 task)

--- a/problem1/7_9.ipynb
+++ b/problem1/7_9.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 2,
    "id": "1565c236-946a-4e43-9b46-536e047c8c3d",
    "metadata": {},
    "outputs": [],
@@ -484,6 +484,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4de442fc-91a5-4dff-adc4-21304c6949bf",
+   "metadata": {},
+   "source": [
+    "Выбран блогер \"varlamovru\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "50b8050e-2c23-4bf1-9780-10cb134e91e4",
    "metadata": {},
    "source": [
@@ -546,6 +554,77 @@
   },
   {
    "cell_type": "markdown",
+   "id": "83e33e7b-ffb0-4f94-b235-ab82f308de65",
+   "metadata": {},
+   "source": [
+    "Немного подчистим"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "25f2a8e7-7841-4815-a1c2-976cf842ffa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"parsed_friends.txt\", \"r\") as f:\n",
+    "    lines = f.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "id": "3d61afbb-f248-42fe-8536-e09ef4846128",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lines = [l.lstrip() for l in lines]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "34c5640a-e85b-435e-8275-c8d50851a75d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lines = np.unique(lines)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6b6c3ce1-20d5-46d6-80d4-63cdfe2a0bdb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'00 hamal\\n'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "decc858e-88af-486c-a160-07e47e1c4b48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"parsed_friends.txt\", \"w\") as f:\n",
+    "    f.writelines(lines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "420dd2a3-4689-455f-82f3-0f9ef3832376",
    "metadata": {},
    "source": [
@@ -554,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 3,
    "id": "f070e1f2-7690-49e0-8cb6-f8e01c2cd509",
    "metadata": {},
    "outputs": [],
@@ -564,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 13,
    "id": "776861ba-7601-49bb-95be-43a4737106ce",
    "metadata": {},
    "outputs": [
@@ -574,7 +653,7 @@
        "333729"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 14,
    "id": "930a20dd-1db9-4238-a668-c2e445624172",
    "metadata": {},
    "outputs": [
@@ -595,7 +674,7 @@
        "1645373"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 15,
    "id": "fd58a746-2fff-48c8-987f-16cd4d4d7aca",
    "metadata": {},
    "outputs": [
@@ -616,7 +695,7 @@
        "True"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 18,
    "id": "1a3a8622-13b8-45a3-ad90-05bb8e2bbcb2",
    "metadata": {},
    "outputs": [
@@ -645,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 19,
    "id": "87078c88-bab1-4e58-8b04-88dd6486f47b",
    "metadata": {},
    "outputs": [
@@ -662,12 +741,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bfd495f2-a092-41e1-b1bf-39427146c2d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "head_usr = 'varlamovru'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a7dd5dcd-d49f-4455-ba10-ff0881258f6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3024"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.degree(head_usr)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "70d0e176-9519-4534-8c1b-9c6157b167b7",
    "metadata": {},
    "source": [
     "**Визуализацию будем проводить через Gephi)**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6435dcc7-6475-4b4b-a7fb-a15ee1bca630",
+   "metadata": {},
+   "source": [
+    "Для визуализации из Topology Filter выбрано ограничение на диапазон степеней (иначе gephi выпадал) от 54 до 3846 (к сожалению, это отсекло некоторые другие вершины больших степеней). Как видно выше, varlamovru имеет не самую большую общую степень.\n",
+    "Кроме требуемых масштабов на размер подписей и вершин, также применена раскраска подписей и вершин в диапазонах, связанных с крупными степенями"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1663385-57f7-42c8-9736-b98f0e22ca87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
